--- a/css/seasons.css
+++ b/css/seasons.css
@@ -56,3 +56,42 @@ section { margin-top: 15px; background-color: #FFF; }
 .subImagesContainer { padding: 0; }
 
 .thumb { height: 90px; margin: 8px; cursor: pointer; }
+
+.lightbox {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	background-color: rgba(0, 0, 0, 0.85);
+	color: white;
+	z-index: 500;
+	padding-top: 20px;
+	margin-top: 0;
+}
+.lightbox-style {
+	max-width: 1100px;
+	margin: 0 auto;
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	color: grey;
+}
+
+.lightbox-img {
+	width: 100%;
+}
+
+.close-lightbox {
+	float: right;
+	margin-right: 18px;
+	margin-top: 12px;
+	font-size: 2em;
+	cursor: pointer;
+}
+
+.lightbox-img {
+	display:block;
+	margin: auto;
+}
